--- a/DesktopManager/MainWindow.xaml
+++ b/DesktopManager/MainWindow.xaml
@@ -82,10 +82,10 @@
                                 <ColumnDefinition Width="75"/>
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
+                            <Border BorderBrush="Black" BorderThickness="1" Grid.ColumnSpan="5"/>
                             <Button Content="Home" Grid.Column="0" Background="White" IsEnabled="False"/>
-                            <Button Content="View" Grid.Column="1" Click="Button_Click_2" Background="White"/>
-                            <Button Content="Settings" Grid.Column="2" Click="Button_Click_1" Background="White"/>
-                            <Button Content="Help" Grid.Column="3" Click="Button_Click_3" Background="White"/>
+                            <Button Content="Settings" Grid.Column="1" Click="Button_Click_1" Background="White"/>
+                            <Button Content="Help" Grid.Column="2" Click="Button_Click_3" Background="White"/>
                         </Grid>
                         <ScrollViewer>
                             <ItemsPresenter/>
@@ -108,6 +108,7 @@
                         <TextBlock Text="{Binding Time}" Grid.Column="2"/>
                         <TextBlock Text="{Binding Memory}" Grid.Column="3"/>
                         <TextBlock Text="{Binding User}" Grid.Column="4"/>
+                        <Border BorderBrush="Black" BorderThickness="1" Grid.ColumnSpan="5"/>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
@@ -121,6 +122,7 @@
                 <ColumnDefinition Width="25*" />
                 <ColumnDefinition Width="25*" />
             </Grid.ColumnDefinitions>
+            <Border BorderBrush="Black" BorderThickness="1" Grid.ColumnSpan="6"/>
             <TextBlock Grid.Column="0" Text="CPU Usage:" VerticalAlignment="Center" FontSize="15"/>
             <TextBlock Grid.Column="1" Text="XX%" VerticalAlignment="Center" FontSize="15"/>
             <TextBlock Grid.Column="2" Text="Memory Usage:" VerticalAlignment="Center" FontSize="15"/>
