--- a/DesktopManager/MoreProcessInformation.xaml
+++ b/DesktopManager/MoreProcessInformation.xaml
@@ -12,7 +12,7 @@
             <RowDefinition/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
-
+        
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="75"/>
@@ -20,6 +20,8 @@
             </Grid.ColumnDefinitions>
             <Button Content="Exit" Background="White" Click="Button_Click"/>
         </Grid>
+
+        <Border BorderBrush="Black" BorderThickness="1"/>
 
         <ScrollViewer Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4">
             <Grid>
@@ -46,6 +48,8 @@
                     <RowDefinition Height="50"/>
                     <RowDefinition Height="50"/>
                 </Grid.RowDefinitions>
+
+                <Border BorderBrush="Black" BorderThickness="1" Grid.ColumnSpan="2" Grid.RowSpan="16" Margin="0,0,12,0"/>
 
                 <TextBlock Text="Process:" FontWeight="Bold" FontSize="24" VerticalAlignment="Center" Grid.Column="1" Grid.Row="0"/>
                 <TextBlock Grid.Row="0" Grid.Column="2" Name="ProcessName" Text="" VerticalAlignment="Center" FontSize="16"/>
