--- a/DesktopManager/DriveWindow.xaml
+++ b/DesktopManager/DriveWindow.xaml
@@ -25,5 +25,40 @@
             <Button Content="Help" Grid.Column="2" Click="Button_Click_2" Background="White"/>
             <Button Content="Disk" Grid.Column="3" Background="White" IsEnabled="False"/>
         </Grid>
+
+        <ListBox ItemsSource="{Binding DriveItems}"
+                 VerticalAlignment="Top"
+                 Grid.Row="1"
+                 SelectionChanged="ListBox_SelectionChanged"
+                 HorizontalAlignment="Stretch">
+            <ListBox.DataContext>
+                <local:Viewer/>
+            </ListBox.DataContext>
+            <ListBox.Template>
+                <ControlTemplate>
+                    <DockPanel LastChildFill="True">
+                        <ScrollViewer>
+                            <ItemsPresenter/>
+                        </ScrollViewer>
+                    </DockPanel>
+                </ControlTemplate>
+            </ListBox.Template>
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid Margin="0,1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="60*"/>
+                            <ColumnDefinition Width="40*"/>
+                            <ColumnDefinition Width="60*"/>
+                            <ColumnDefinition Width="60*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="{Binding DriveName}" Grid.Column="0"/>
+                        <TextBlock Text="{Binding DriveTotalSpace}" Grid.Column="1"/>
+                        <TextBlock Text="{Binding DriveSpace}" Grid.Column="2"/>
+                        <TextBlock Text="{Binding DriveFormat}" Grid.Column="3"/>
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </Window>
