--- a/DesktopManager/MainWindow.xaml
+++ b/DesktopManager/MainWindow.xaml
@@ -86,6 +86,7 @@
                             <Button Content="Home" Grid.Column="0" Background="White" IsEnabled="False"/>
                             <Button Content="Settings" Grid.Column="1" Click="Button_Click_1" Background="White"/>
                             <Button Content="Help" Grid.Column="2" Click="Button_Click_3" Background="White"/>
+                            <Button Content="Drive" Grid.Column="3" Background="White" Click="Button_Click_2"/>
                         </Grid>
                         <ScrollViewer>
                             <ItemsPresenter/>
