--- a/DesktopManager/DriveWindow.xaml
+++ b/DesktopManager/DriveWindow.xaml
@@ -9,6 +9,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
+            <RowDefinition Height="60"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid>
@@ -26,26 +27,30 @@
             <Button Content="Disk" Grid.Column="3" Background="White" IsEnabled="False"/>
         </Grid>
 
+        <Grid Grid.Row="1" Margin="10,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="56*"/>
+                <ColumnDefinition Width="38*"/>
+                <ColumnDefinition Width="58*"/>
+                <ColumnDefinition Width="60*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="Drive Name:" VerticalAlignment="Center" FontSize="20" FontWeight="Bold"/>
+            <TextBlock Text="Total Drive Space:" VerticalAlignment="Center" FontSize="20" FontWeight="Bold" Grid.Column="1"/>
+            <TextBlock Text="Avalible Space:" VerticalAlignment="Center" FontSize="20" FontWeight="Bold" Grid.Column="2"/>
+            <TextBlock Text="Drive Format:" VerticalAlignment="Center" FontSize="20" FontWeight="Bold" Grid.Column="3"/>
+        </Grid>
+
         <ListBox ItemsSource="{Binding DriveItems}"
                  VerticalAlignment="Top"
-                 Grid.Row="1"
-                 SelectionChanged="ListBox_SelectionChanged"
+                 Grid.Row="2"
+                 Grid.ColumnSpan="2"
                  HorizontalAlignment="Stretch">
             <ListBox.DataContext>
                 <local:Viewer/>
             </ListBox.DataContext>
-            <ListBox.Template>
-                <ControlTemplate>
-                    <DockPanel LastChildFill="True">
-                        <ScrollViewer>
-                            <ItemsPresenter/>
-                        </ScrollViewer>
-                    </DockPanel>
-                </ControlTemplate>
-            </ListBox.Template>
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <Grid Margin="0,1">
+                    <Grid Margin="0,1" Height="40" Width="1340">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="60*"/>
                             <ColumnDefinition Width="40*"/>
