--- a/DesktopManager/DriveWindow.xaml
+++ b/DesktopManager/DriveWindow.xaml
@@ -21,23 +21,25 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Border BorderBrush="Black" BorderThickness="1" Grid.ColumnSpan="5"/>
-            <Button Content="Home" Grid.Column="0" Click="Button_Click" Background="White"/>
-            <Button Content="Settings" Grid.Column="1" Click="Button_Click_1" Background="White"/>
-            <Button Content="Help" Grid.Column="2" Click="Button_Click_2" Background="White"/>
-            <Button Content="Disk" Grid.Column="3" Background="White" IsEnabled="False"/>
+            <Button Content="Back" Grid.Column="0" Click="Button_Click" Background="White"/>
+            <Button Content="Disk" Grid.Column="1" Background="White" IsEnabled="False"/>
         </Grid>
 
         <Grid Grid.Row="1" Margin="10,0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="56*"/>
-                <ColumnDefinition Width="38*"/>
                 <ColumnDefinition Width="58*"/>
+                <ColumnDefinition Width="40*"/>
                 <ColumnDefinition Width="60*"/>
+                <ColumnDefinition Width="61*"/>
             </Grid.ColumnDefinitions>
             <TextBlock Text="Drive Name:" VerticalAlignment="Center" FontSize="20" FontWeight="Bold"/>
+            <Border Grid.Column="0"  BorderBrush="Black" BorderThickness="1"/>
             <TextBlock Text="Total Drive Space:" VerticalAlignment="Center" FontSize="20" FontWeight="Bold" Grid.Column="1"/>
+            <Border Grid.Column="1"  BorderBrush="Black" BorderThickness="1"/>
             <TextBlock Text="Avalible Space:" VerticalAlignment="Center" FontSize="20" FontWeight="Bold" Grid.Column="2"/>
+            <Border Grid.Column="2"  BorderBrush="Black" BorderThickness="1"/>
             <TextBlock Text="Drive Format:" VerticalAlignment="Center" FontSize="20" FontWeight="Bold" Grid.Column="3"/>
+            <Border Grid.Column="3"  BorderBrush="Black" BorderThickness="1"/>
         </Grid>
 
         <ListBox ItemsSource="{Binding DriveItems}"
@@ -50,17 +52,17 @@
             </ListBox.DataContext>
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <Grid Margin="0,1" Height="40" Width="1340">
+                    <Grid Margin="0,1" Height="40" Width="1335">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="60*"/>
-                            <ColumnDefinition Width="40*"/>
-                            <ColumnDefinition Width="60*"/>
-                            <ColumnDefinition Width="60*"/>
+                            <ColumnDefinition Width="59*"/>
+                            <ColumnDefinition Width="39*"/>
+                            <ColumnDefinition Width="59*"/>
+                            <ColumnDefinition Width="59*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="{Binding DriveName}" Grid.Column="0"/>
-                        <TextBlock Text="{Binding DriveTotalSpace}" Grid.Column="1"/>
-                        <TextBlock Text="{Binding DriveSpace}" Grid.Column="2"/>
-                        <TextBlock Text="{Binding DriveFormat}" Grid.Column="3"/>
+                        <TextBlock Text="{Binding DriveName}" Grid.Column="0" VerticalAlignment="Center" FontSize="16"/>
+                        <TextBlock Text="{Binding DriveTotalSpace}" Grid.Column="1" VerticalAlignment="Center" FontSize="16"/>
+                        <TextBlock Text="{Binding DriveSpace}" Grid.Column="2" VerticalAlignment="Center" FontSize="16"/>
+                        <TextBlock Text="{Binding DriveFormat}" Grid.Column="3" VerticalAlignment="Center" FontSize="16"/>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
